test/lambda/negative/syntax/invalid_number.ls
// @expect-error: E103
// @description: Invalid number literal with multiple dots

let x = 12.34.56
